# ai-shark

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  GROQ_INTEGRATION_SUMMARY.md  INTELLIGENT_ANALYZER_SETUP.md  Multi-Agent-Arch.md  Notes.md  Notes.txt  README.md  SETUP.md  TASKS_4_5_COMPLETION_SUMMARY.md  UI_README.md  VC_ANALYZER_README.md  analyzer_module.py  clear_logs.py  crawl.py  data_extraction_pipeline.py  debug_doc_{i}.json  demo_analysis_pipeline.py  demo_analysis_pipeline_broken.py  docker-compose.yml  evaluation_pipeline.py  extract.py  founder_research_orchestrator.py  generate.py  inc42_scraper.py  news_scrapper.py  prods_and_services.py  pyproject.toml  questionnaire_agent.py  requirements.txt  run_evaluation.py  runner.py  sample.py  scraper_module.py  startup_report.md  streamlit_app.py  streamlit_ui.py  (+6 more)
architecture/: founder_research_system.md
config/: logging_config.py  prompts.yaml  settings.py  startup_validation.py
docs/: document_loader_error_handling.md  models_documentation.md
examples/: analyzer_example.py  document_loader_demo.py  gemini_analyzer_example.py  groq_business_analysis_example.py  main_pipeline_example.py  output_manager_example.py  streamlit_ui_example.py
outputs/: Eleven-Labs_2025-09-06_23-10-08.md  analysis_result_2025-09-14_00-54-53.md  analysis_result_2025-09-14_00-56-46.md  analysis_summary.md  combined_business_analysis.md  executive_summary.md  sia-business-analysis.md  sia-market-analysis.md
outputs/cashvisory/: founders-checklist.docx  founders-checklist.md  metadata.json  pitch_deck.md  public_data.md  table_of_contents.json
outputs/ctruh/: metadata.json  pitch_deck.md  public_data.md  table_of_contents.json
outputs/naario/: ans-founders-checklist.md  founders-checklist.docx  founders-checklist.md  investment-memo.md  metadata.json  pitch_deck.md  public_data.md  table_of_contents.json
outputs/sia/: founders-checklist.docx  founders-checklist.md  metadata.json  pitch_deck.md  public_data.md  table_of_contents.json
outputs/syntra/: metadata.json  pitch_deck.md  public_data.md  (+1 more)
results/: Consolidated_result-14.json  Consolidated_result.json  TOC-14.json  TOC.json  analysis_results.md  founder_report.md  generated_question-82a005d5-59f9-40d9-b2c1-d13d4cb645ae.md  products_and_services.json  public_data.md
sample-output/: productAndServices.md  rupeek_analysis_data.json  rupeek_analysis_data.md  startup_report.md  www.loophealth.com_analysis_data.json  www.loophealth.com_analysis_data.md
specs/: analysis_integration.md  answering_agent.md  cleanup.md  data_extraction.md  final_memo.md  fix.md  founder_simulation.md  market_analysis.md  public_data.md  questionnaire_agent.md  ui.md
src/: __init__.py  intelligent_analyzer.py  main.py
tests/: __init__.py  conftest.py  test_agents.py  test_api_clients.py  test_business_agent.py  test_config_connectivity.py  test_document_loader.py  test_document_processor.py  test_evaluation_agent.py  test_fixtures.py  test_gemini_analyzer.py  test_main_integration.py  test_models.py  test_new_models.py  test_output_manager.py  test_questionnaire_agent.py  test_streamlit_integration.py  test_streamlit_interface.py
(+85 files in other folders)
