[project]
name = "ai-shark"
version = "0.1.0"
description = "VC Document Analyzer - AI-powered pitch deck analysis tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "PyMuPDF>=1.23.0",
    "python-pptx>=0.6.21",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "google-generativeai==0.8.5",
    "pymupdf==1.26.4",
    "python-dotenv",
    "numpy",
    "google-api-python-client==2.181.0",
    "google-auth==2.40.3",
    "Pillow==11.3.0",
    "langchain",
    "llama-index",
    "langchain-openai",
    "langchain-google-genai",
    "PyYAML>=6.0",
    "python-markdown>=0.1.0",
    "pydantic>=2.11.9",
    "tiktoken>=0.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "langchain-core>=0.3.76",
    "langchain-community>=0.3.29",
    "google-genai>=1.36.0",
    "markdown>=3.9",
    "groq>=0.4.1",
    "langchain-groq>=0.1.3",
    "ddgs"
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.scripts]
vc-analyzer = "src.main:main"
